CF version 1.0.2