@@ -3,6 +3,7 @@ See LICENSE file at <a href="https://gitlab.com/CredibilityFramework/cf/-/blob/m
 *************************************************************************************************************/
 package gov.sandia.cf.parts.services;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -110,9 +111,10 @@ public class ClientServiceManager implements IClientServiceManager {
 			}
 		} else {
 			try {
-				service = serviceClass.newInstance();
+				service = serviceClass.getDeclaredConstructor().newInstance();
 				mapEnabledService.put(serviceClass, service);
-			} catch (InstantiationException | IllegalAccessException e) {
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				throw new CredibilityServiceRuntimeException(CredibilityServiceRuntimeMessage.INSTANTIATION_ERROR,
 						interfaceClass.getName(), e.getMessage());
 			}
